apps/qbittorrent/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: network.speed.2.5g
                    operator: In
                    values:
                      - "true"
              weight: 50
      containers:
        - name: qbittorrent
          volumeMounts:
            - name: downloads-data
              mountPath: /downloads
            - name: downloads-radarr-data
              mountPath: /downloads/radarr
              subPath: radarr
            - name: downloads-radarr-data
              mountPath: /downloads/incomplete/radarr
              subPath: incomplete/radarr
            - name: downloads-sonarr-data
              mountPath: /downloads/sonarr
              subPath: sonarr
            - name: downloads-sonarr-data
              mountPath: /downloads/incomplete/sonarr
              subPath: incomplete/sonarr
            - name: downloads-lidarr-data
              mountPath: /downloads/lidarr
              subPath: lidarr
            - name: downloads-lidarr-data
              mountPath: /downloads/incomplete/lidarr
              subPath: incomplete/lidarr
            - name: downloads-whisparr-data
              mountPath: /downloads/whisparr
              subPath: whisparr
            - name: downloads-whisparr-data
              mountPath: /downloads/incomplete/whisparr
              subPath: incomplete/whisparr
      volumes:
        - name: downloads-data
          persistentVolumeClaim:
            claimName: downloads-data
        - name: downloads-radarr-data
          persistentVolumeClaim:
            claimName: downloads-radarr-data
        - name: downloads-sonarr-data
          persistentVolumeClaim:
            claimName: downloads-sonarr-data
        - name: downloads-lidarr-data
          persistentVolumeClaim:
            claimName: downloads-lidarr-data
        - name: downloads-whisparr-data
          persistentVolumeClaim:
            claimName: downloads-whisparr-data
