apps/qbittorrent/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  hostnames:
    - qbittorrent.i.shikanime.studio
  parentRefs:
    - name: qbittorrent
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-redirect
spec:
  hostnames:
    - qbittorrent.i.shikanime.studio
  parentRefs:
    - name: qbittorrent
      sectionName: http
